[tool.poetry]
name = "aw-watcher-buttons"
version = "0.0.1"
description = "Hardware buttons watcher for ActivityWatch"
authors = ["Zach Strout <zachstrout@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/RTnhN/aw-watcher-buttons"

[tool.poetry.scripts]
aw-watcher-buttons = "aw_watcher_buttons:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = "^0.5.7"
pyserial = "^3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
